--- a/src/pages/addProfil/addProfil.css
+++ b/src/pages/addProfil/addProfil.css
@@ -5,3 +5,15 @@
     top:0;
     bottom: 0;
 }
+
+ion-input.custom {
+    --background: #373737;
+    --color: #fff;
+    --placeholder-color: #ddd;
+    --placeholder-opacity: .8;
+  
+    --padding-bottom: 10px;
+    --padding-end: 10px;
+    --padding-start: 10px;
+    --padding-top: 10px;
+  }
